--- a/Canvas/Content/Canvas.css
+++ b/Canvas/Content/Canvas.css
@@ -31,6 +31,12 @@
     background: #5372f0;
 }
 
+.divTool button img {
+    width: 15px;
+    height: 15px;
+    margin-right: 5px;
+}
+
 .divTabTitle {
     display: flex;
     justify-content: space-around;
@@ -39,7 +45,7 @@
     padding: 5px;
 }
 
-.divTabDetailFilter {
+.divTabDetail {
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 15px;
@@ -56,18 +62,21 @@
     justify-content: space-between;
 }
 
-.divTabDetailFilter input {
+#tabDtlFilter input {
     width: 100%;
     accent-color: #5372f0;
 }
 
-.divTabDetailFilter button {
+#tabDtlFilter button {
     width: calc(100% / 2 - 15px);
     margin: 5px;
 }
 
-.divTabDetailFilter button img {
-    width: 15px;
-    height: 15px;
-    margin-right: 5px;
+#tabDtlEditor {
+    width: 100%;
+}
+
+#tabDtlEditor button {
+    width: 50%;
+    margin: 5px;
 }
