Modify to use fabric library

--- a/Canvas/Views/Home/Edit.cshtml
+++ b/Canvas/Views/Home/Edit.cshtml
@@ -62,4 +62,5 @@
 <canvas id="hiddenCanvas" style="border: solid;"></canvas>
 
 <link rel="stylesheet" href="~/Content/Canvas.css" />
+<script src="~/Scripts/fabric.min.js"></script>
 <script src="~/Scripts/Canvas.js"></script>
