Modify tab feature

--- a/Canvas/Views/Home/Edit.cshtml
+++ b/Canvas/Views/Home/Edit.cshtml
@@ -5,8 +5,8 @@
     </div>
     <div class="divTool">
         <div class="divTabTitle">
-            <label id="lblFilter" onclick="filterClick()">Filter</label>
-            <label id="lblEditor" onclick="editorClick()">Editor</label>
+            <label id="lblFilter" onclick="tabClicked('Filter')">Filter</label>
+            <label id="lblEditor" onclick="tabClicked('Editor')">Editor</label>
         </div>
 
         <div class="divTabDetail" id="tabDtlFilter">
