--- a/Canvas/Views/Home/Edit.cshtml
+++ b/Canvas/Views/Home/Edit.cshtml
@@ -40,8 +40,8 @@
                 <label for="chkBoxInversion">Inversion</label>
             </div>
 
-            <button type="button" onclick="rotateLeft()"><img title="rotate-left" src="~/Content/CSS/rotate-left.png" />Rotate Left</button>
-            <button type="button" onclick="rotateRight()"><img title="rotate-right" src="~/Content/CSS/rotate-right.png" />Rotate Right</button>
+            <button type="button" onclick="rotate('Left')"><img title="rotate-left" src="~/Content/CSS/rotate-left.png" />Rotate Left</button>
+            <button type="button" onclick="rotate('Right')"><img title="rotate-right" src="~/Content/CSS/rotate-right.png" />Rotate Right</button>
             <button type="button" onclick="zoom('In')"><img title="zoom-in" src="~/Content/CSS/zoom-in.png" />Zoom In</button>
             <button type="button" onclick="zoom('Out')"><img title="zoom-out" src="~/Content/CSS/zoom-out.png" />Zoom Out</button>
         </div>
