--- a/Canvas/Views/Home/Edit.cshtml
+++ b/Canvas/Views/Home/Edit.cshtml
@@ -1,7 +1,6 @@
 ﻿<div class="divEditor">
     <div class="divImage">
         <canvas id="canvas" style="border: dotted;"></canvas>
-        <input type="text" id="txtBoxText" title="txtBoxText">
     </div>
     <div class="divTool">
         <div class="divTabTitle">
@@ -51,13 +50,13 @@
             <button type="button" onclick="crop()"><img title="crop" src="~/Content/CSS/crop.png" />Crop</button>
             <button type="button" onclick="eraser()"><img title="eraser" src="~/Content/CSS/eraser.png" />Eraser</button>
             <button type="button" onclick="text()"><img title="text" src="~/Content/CSS/text.png" />Text</button>
+            <input type="color" id="textColor" title="textColor" value="#e66465">
         </div>
 
         <button type="button" onclick="resetFilter()">RESET FILTERS</button>
         <button type="button">SAVE</button>
     </div>
 </div>
-<canvas id="hiddenCanvas" style="border: solid;"></canvas>
 
 <link rel="stylesheet" href="~/Content/Canvas.css" />
 <script src="~/Scripts/fabric.min.js"></script>
