Add save function

--- a/Canvas/Views/Home/Edit.cshtml
+++ b/Canvas/Views/Home/Edit.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="divEditor">
     <div class="divImage">
-        <canvas id="canvas" style="border: dotted;"></canvas>
+        <canvas id="canvas"></canvas>
     </div>
     <div class="divTool">
         <div class="divTabTitle">
@@ -54,7 +54,7 @@
         </div>
 
         <button type="button" onclick="resetFilter()">RESET FILTERS</button>
-        <button type="button">SAVE</button>
+        <button type="button" onclick="saveImage()">SAVE</button>
     </div>
 </div>
 
