Modify rotate function to avoid blurring of image if zoom

--- a/Canvas/Views/Home/Edit.cshtml
+++ b/Canvas/Views/Home/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="divImage">
-    <canvas id="canvas" style="border: dotted;"></canvas>
+    <canvas id="canvas"></canvas>
 </div>
 
 <div class="divTool">
